# matyan-backend

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  install.txt  pyproject.toml
.github/workflows/: release.yml
docs/: PRODUCTION_CONFIG.md
scripts/: generate_favicon.py  seed_data.py  smoke_control.py  smoke_delete.py  smoke_ingestion.py  smoke_kafka.py  smoke_test.py
src/matyan_backend/: app.py  cli.py  config.py  deps.py  fdb_types.py  logging.py  metrics.py  thread_pool.py
src/matyan_backend/api/: __init__.py  _main.py  errors.py  health.py  streaming.py  version.py
src/matyan_backend/api/dashboard_apps/: pydantic_models.py  views.py
src/matyan_backend/api/dashboards/: pydantic_models.py  views.py
src/matyan_backend/api/experiments/: __init__.py  _main.py  _pydantic_models.py
src/matyan_backend/api/projects/: __init__.py  _main.py  _pydantic_models.py
src/matyan_backend/api/reports/: pydantic_models.py  views.py
src/matyan_backend/api/runs/: __init__.py  _blob_uri.py  _collections.py  _custom_objects.py  _planner.py  _pydantic_models.py  _query.py  _range_utils.py  _run.py  _streaming.py  _views.py
src/matyan_backend/api/tags/: __init__.py  _main.py  _pydantic_models.py
src/matyan_backend/backup/: __init__.py  export_blobs.py  export_entities.py  export_run.py  exporter.py  restore_direct.py
src/matyan_backend/jobs/: lock.py
src/matyan_backend/kafka/: __init__.py  producer.py  security.py
src/matyan_backend/storage/: __init__.py  azure_client.py  blob.py  encoding.py  entities.py  fdb_client.py  gcs_client.py  indexes.py  project.py  runs.py  s3_client.py  sequences.py  tree.py
src/matyan_backend/workers/: control.py  ingestion.py  metrics.py
tests/: test_app.py  test_cli.py  test_config.py  test_fdb_retry.py  test_infra.py  test_kafka_producer.py  test_worker_lifecycle.py
tests/api/: conftest.py  test_blob_uri.py  test_collections_extended.py  test_custom_objects.py  test_custom_objects_dump.py  test_dashboards.py  test_dashboards_extended.py  test_error_envelope.py  test_errors_module.py  test_experiments.py  test_experiments_extended.py  test_health.py  test_metrics.py  test_planner.py  test_planner_extended.py  test_planner_metrics.py  test_projects.py  test_query.py  test_query_timing.py  test_remaining_coverage.py  test_runs.py  test_runs_clear_tombstone.py  test_runs_extended.py  test_streaming_codec.py  test_streaming_endpoints.py  test_streaming_queue_config.py  test_tags.py  test_tags_extended.py  test_version.py  test_views.py  test_worker_metrics.py
tests/backup/: conftest.py  test_export_import.py  test_manifest.py
tests/jobs/: conftest.py  test_lock.py
tests/storage/: conftest.py  test_context_utils.py  test_encoding_extended.py  test_entities.py  test_indexes.py  test_project_extended.py  test_project_params_cache.py  test_runs.py  test_runs_extended.py  test_sequences.py  test_sequences_extended.py  test_tree.py
tests/workers/: conftest.py  test_control_handlers.py  test_ingestion_handlers.py  test_txn_size.py
